--- a/includes/assets/global/global.scss
+++ b/includes/assets/global/global.scss
@@ -166,3 +166,57 @@ a.button.wp-element-button.product_type_lottery.add_to_cart_button:after {
   font-size: 18px;
   font-weight: bold;
 }
+
+.woocommerce ul.products li.product .woocommerce-loop-product__title, .woocommerce-page ul.products li.product .woocommerce-loop-product__title {
+  color: #fff;
+  font-size: 24px;
+  font-family: 'Urbanist';
+}
+.woocommerce ul.products li.product .price, .woocommerce-page ul.products li.product .price {
+  color: #289894;
+  font-size: 24px;
+  padding-top: 15px;
+}
+.astra-shop-summary-wrap {
+  position: relative;
+}
+
+span.lta_after_price {
+  color: #fff;
+  font-size: 10px;
+  margin-left: 5px;
+}
+del span.lta_after_price, .ast-on-card-button, .lty-lottery-time-left-label-shop-page, .lty-progress-count-loop .lty-progress-bar-notice {
+  display: none;
+}
+.lty-lottery-progress-bar-loop {
+  position: relative;
+}
+.lty-progress-count-loop {
+  position: absolute;
+  top: -10px;
+  z-index: 2;
+  left: 40%;
+}
+.lty-progress-count-loop .lty-progress-bar-start {
+  width: 10%;
+}
+.lty-progress-bar {
+  background-color: #29292c !important;
+  border: 1px solid #29292c !important;
+  border-radius: 2px !important;
+  overflow: hidden;
+  color: #fff !important;
+}
+.lty-progress-count-loop .lty-progress-bar-end {
+  width: 5%;
+}
+.quantity input[type="button"] {
+  width: 30px;
+  height: 30px;
+  font-size: 20px;
+  font-weight: bold;
+  line-height: 1;
+  text-align: center;
+  cursor: pointer;
+}
