--- a/includes/assets/global/global.css
+++ b/includes/assets/global/global.css
@@ -242,4 +242,140 @@ del span.lta_after_price, .ast-on-card-button, .lty-lottery-time-left-label-shop
   cursor: pointer;
 }
 
+.woocommerce div.product p.price bdi {
+  font-size: 42px !important;
+  font-family: "Urbanist";
+}
+
+.quantity-range-slider label:first-child {
+  display: none;
+}
+
+.quantity-range-slider input[type=button] {
+  border-radius: 5px;
+  background-color: #4e4e55;
+  border: 2px solid #4e4e55 !important;
+  color: #fff !important;
+  font-weight: 700;
+  transition: 0.3s;
+}
+
+.quantity-range-slider input[type=button]:hover {
+  border-color: #fcb800 !important;
+  transition: 0.3s;
+}
+
+.quantity-range-slider input[type=range] {
+  margin: 0px 10px;
+}
+
+.quantity-range-slider {
+  margin-bottom: 40px;
+}
+
+form.cart.lty-participate-now .quantity {
+  display: none;
+}
+
+.woocommerce div.product form.cart .button {
+  width: 100%;
+  background-color: #289894;
+  transition: 0.3s;
+  border-radius: 5px;
+  letter-spacing: 0.2rem !important;
+  font-family: urbanist, sans-serif;
+  text-transform: uppercase;
+  line-height: 29px;
+}
+
+.woocommerce div.product form.cart .button:hover {
+  background-color: #fcb800 !important;
+  transition: 0.3s;
+}
+
+p.lty-lottery-time-left-label {
+  display: none;
+}
+
+.woocommerce div.product .product_meta {
+  border-top: none;
+}
+
+body.single-product .summary .price {
+  margin-bottom: 2px;
+}
+
+.single-product div.product .price {
+  color: #295cd9;
+  padding-top: 0;
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
+body.single-product .summary .price .woocommerce-Price-amount {
+  color: #289894 !important;
+  font-size: 42px !important;
+}
+
+.single-product div.product .price .lta_after_price {
+  color: #a5b0b8;
+  text-transform: uppercase;
+  font-size: 13px;
+  font-weight: bold;
+  margin-left: 4px;
+}
+
+.woocommerce-error, .woocommerce-info, .woocommerce-message {
+  color: #155724;
+  background-color: #d4edda;
+  border-color: #c3e6cb;
+}
+
+.woocommerce-page table.cart td.actions .button,
+.woocommerce-page #content table.cart td.actions .button, .woocommerce a.button.alt,
+.woocommerce .woocommerce-message a.button,
+.ast-site-header-cart .widget_shopping_cart .buttons .button.checkout,
+.woocommerce button.button.alt.disabled,
+.wc-block-grid__products .wc-block-grid__product .wp-block-button__link {
+  background-color: #111;
+  border-color: #fcb800;
+  color: #fff;
+  font-style: normal;
+  border-radius: 30px;
+  padding: 8px 50px 10px 30px;
+  border-width: 2px;
+  white-space: nowrap;
+  text-align: left;
+  font-size: 16px;
+  position: relative;
+  font-weight: 700;
+  font-family: "Barlow Condensed", sans-serif;
+  text-transform: uppercase !important;
+  letter-spacing: 0.1rem;
+}
+
+.lty-lottery-countdown-timer .lty-lottery-timer {
+  color: #fcb800;
+}
+
+.lty-lottery-date-ranges {
+  margin-bottom: 10px;
+  background-color: transparent !important;
+  padding: 0 90px !important;
+  background-image: url(//northern-competitions.co.uk/wp-content/themes/northern-competitions/assets/css/../images/timer-left.png), url(//northern-competitions.co.uk/wp-content/themes/northern-competitions/assets/css/../images/timer-right.png) !important;
+  background-position: left 30px center, right 30px center !important;
+  background-repeat: no-repeat !important;
+  background-size: 43px 18px !important;
+  margin: 0 auto;
+}
+
+.lty-shop-timer-wrapper {
+  background: transparent;
+  background-color: transparent !important;
+  background-image: url(//northern-competitions.co.uk/wp-content/themes/northern-competitions/assets/css/../images/timer-left.png), url(//northern-competitions.co.uk/wp-content/themes/northern-competitions/assets/css/../images/timer-right.png) !important;
+  background-position: left 10px center, right 20px center !important;
+  background-repeat: no-repeat !important;
+  background-size: 43px 18px !important;
+}
+
 /*# sourceMappingURL=global.css.map */
