draw widget added

--- a/includes/assets/global/global.scss
+++ b/includes/assets/global/global.scss
@@ -381,3 +381,6 @@ body.single-product .summary .price .woocommerce-Price-amount {
     border-radius: .25rem;
   }
 }
+span.ast-shop-product-out-of-stock {
+  display: none;
+}
