--- a/includes/assets/global/global.css
+++ b/includes/assets/global/global.css
@@ -228,10 +228,6 @@ del span.lta_after_price, .ast-on-card-button, .lty-lottery-time-left-label-shop
   color: #fff !important;
 }
 
-.lty-progress-count-loop .lty-progress-bar-end {
-  width: 5%;
-}
-
 .quantity input[type=button] {
   width: 30px;
   height: 30px;
@@ -240,6 +236,10 @@ del span.lta_after_price, .ast-on-card-button, .lty-lottery-time-left-label-shop
   line-height: 1;
   text-align: center;
   cursor: pointer;
+}
+
+p.lty-lottery-short-description {
+  display: none;
 }
 
 .woocommerce div.product p.price bdi {
@@ -381,7 +381,8 @@ body.single-product .summary .price .woocommerce-Price-amount {
 .winner-lists-lottery-addons {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-gap: 30px;
+  column-gap: 30px;
+  row-gap: 1.5rem;
 }
 
 .winners-box-lt-a {
@@ -402,10 +403,11 @@ body.single-product .summary .price .woocommerce-Price-amount {
   color: #fff;
   font-weight: 900;
   font-family: "Urbanist", sans-serif;
-  margin-top: 2rem;
+  margin-bottom: 1rem;
 }
 .winners-box-lt-a .winner-body-txt p {
   color: #fcb800;
+  margin-bottom: 0rem;
 }
 .winners-box-lt-a .winner-body-txt span {
   color: #fff;
@@ -420,6 +422,80 @@ body.single-product .summary .price .woocommerce-Price-amount {
 
 span.ast-shop-product-out-of-stock {
   display: none;
+}
+
+.lty-pagination-wrap {
+  display: flex;
+  padding-left: 0;
+  list-style: none;
+  border-radius: 0.25rem;
+  justify-content: center !important;
+  margin-top: 1rem;
+}
+.lty-pagination-wrap ul {
+  display: flex;
+  padding-left: 0;
+  list-style: none;
+  border-radius: 0.25rem;
+}
+.lty-pagination-wrap ul li span.current {
+  background-color: #fcb800;
+  border-color: #fcb800;
+  color: #fff;
+}
+.lty-pagination-wrap ul li span, .lty-pagination-wrap ul li a {
+  text-decoration: none !important;
+  position: relative;
+  display: block;
+  padding: 0.5rem 0.75rem;
+  margin-left: -1px;
+  line-height: 1.25;
+  background-color: #fff;
+  border: 1px solid #dee2e6;
+  color: #111;
+  text-transform: uppercase;
+  font-size: 14px;
+}
+
+.lty-a-competition-results-wrapper .lty-a-result-wrap {
+  padding-left: 4rem;
+  margin-left: 4rem;
+  border-left: 1px solid #242424;
+  border-width: 1px;
+}
+.lty-a-competition-results-wrapper .lty-a-result-wrap .lty-a-winner-card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-clip: border-box;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  background: #242424;
+  border-color: #444;
+  border-radius: 0;
+  margin-bottom: 1.5rem !important;
+}
+.lty-a-competition-results-wrapper .lty-a-result-wrap .lty-a-winner-card .lty-a-card-body {
+  color: #171717;
+  flex: 1 1 auto;
+  min-height: 1px;
+  padding: 1.25rem;
+}
+.lty-a-competition-results-wrapper .lty-a-result-wrap .lty-a-winner-card .lty-a-card-body .lty-a-card-title {
+  margin-bottom: 1.5rem;
+  color: #fff;
+  text-transform: uppercase;
+  font-family: "Urbanist", sans-serif;
+  font-size: 1.5rem;
+  font-weight: 900;
+  font-style: normal;
+}
+.lty-a-competition-results-wrapper .lty-a-result-wrap .lty-a-winner-card .lty-a-card-body .lty-a-single-result {
+  color: #fff;
+}
+.lty-a-competition-results-wrapper .lty-a-result-wrap .lty-a-winner-card .lty-a-card-body .lty-a-single-result .ticket-winner-tn {
+  color: #fcb800;
 }
 
 /*# sourceMappingURL=global.css.map */
