--- a/includes/assets/global/global.scss
+++ b/includes/assets/global/global.scss
@@ -866,3 +866,6 @@ a {
 .lty-frontend-table tbody tr:nth-child(2n) {
   background: transparent;
 }
+.single-product .lty-lottery-date-ranges {
+  background-image: none !important;
+}
